added utils and cmake stuff

--- a/src/map/CMakeLists.txt
+++ b/src/map/CMakeLists.txt
@@ -7,3 +7,6 @@ add_library(map_lib ${MAP_SOURCES} ${MAP_HEADERS})
 
 # Include this directory's headers
 target_include_directories(map_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(map_lib PUBLIC robot_lib utils_lib)
+ 
