--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,10 +10,11 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_tests.cpp sensor_tests.cpp)
+add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_tests.cpp sensor_tests.cpp expanding_map_tests.cpp)
 add_executable(robot_tests robot_tests.cpp)
 add_executable(algorithm_tests algorithm_tests.cpp)
 add_executable(sensor_tests sensor_tests.cpp)
+add_executable(expanding_map_tests expanding_map_tests.cpp)
 
 
 target_link_libraries(unit_tests
@@ -39,6 +40,11 @@ target_link_libraries(sensor_tests
     robot_lib
     GTest::gtest_main
 )
+target_link_libraries(expanding_map_tests
+    algorithm_lib
+    robot_lib
+    GTest::gtest_main
+)
 
 include(GoogleTest)
-gtest_discover_tests(unit_tests robot_tests sensor_tests)
+gtest_discover_tests(unit_tests robot_tests sensor_tests expanding_map_tests algorithm_tests)
