--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,11 +10,13 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_tests.cpp sensor_tests.cpp expanding_map_tests.cpp)
+add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_tests.cpp 
+                sensor_tests.cpp expanding_map_tests.cpp graph_tests.cpp)
 add_executable(robot_tests robot_tests.cpp)
 add_executable(algorithm_tests algorithm_tests.cpp)
 add_executable(sensor_tests sensor_tests.cpp)
 add_executable(expanding_map_tests expanding_map_tests.cpp)
+add_executable(graph_tests graph_tests.cpp)
 
 
 target_link_libraries(unit_tests
@@ -24,6 +26,7 @@ target_link_libraries(unit_tests
 )
 
 target_link_libraries(robot_tests
+    smart_map_lib
     algorithm_lib
     robot_lib
     GTest::gtest_main
@@ -46,5 +49,10 @@ target_link_libraries(expanding_map_tests
     GTest::gtest_main
 )
 
+target_link_libraries(graph_tests
+    smart_map_lib
+    GTest::gtest_main
+)
+
 include(GoogleTest)
-gtest_discover_tests(unit_tests robot_tests sensor_tests expanding_map_tests algorithm_tests)
+gtest_discover_tests(unit_tests robot_tests sensor_tests expanding_map_tests algorithm_tests graph_tests)
