--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,8 @@
         "string_view": "cpp",
         "numbers": "cpp",
         "semaphore": "cpp",
-        "text_encoding": "cpp"
+        "text_encoding": "cpp",
+        "cinttypes": "cpp",
+        "queue": "cpp"
     }
 }
