added elaborate tests for smartalgo

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -11,11 +11,10 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_tests.cpp 
-                sensor_tests.cpp expanding_map_tests.cpp graph_tests.cpp)
+                sensor_tests.cpp graph_tests.cpp)
 add_executable(robot_tests robot_tests.cpp)
 add_executable(algorithm_tests algorithm_tests.cpp)
 add_executable(sensor_tests sensor_tests.cpp)
-add_executable(expanding_map_tests expanding_map_tests.cpp)
 add_executable(graph_tests graph_tests.cpp)
 
 
@@ -39,11 +38,6 @@ target_link_libraries(algorithm_tests
 )
 
 target_link_libraries(sensor_tests
-    algorithm_lib
-    robot_lib
-    GTest::gtest_main
-)
-target_link_libraries(expanding_map_tests
     algorithm_lib
     robot_lib
     GTest::gtest_main
