--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_compile_options(-std=c++20 -Wall -Wextra -Werror -pedantic)
 add_subdirectory(src/algorithm)
 add_subdirectory(src/smart_map)
 add_subdirectory(src/robot)
+add_subdirectory(src/sensors)
 add_subdirectory(src/tests)
 add_subdirectory(src/config)
 add_subdirectory(src/utils)
