--- a/src/robot/CMakeLists.txt
+++ b/src/robot/CMakeLists.txt
@@ -3,8 +3,8 @@ file(GLOB ROBOT_SOURCES "*.cpp")
 file(GLOB ROBOT_HEADERS "*.h")
 
 # Create a library from the source files
-add_library(robot_lib ${ROBOT_SOURCES} ${ROBOT_HEADERS})
+add_library(robot_lib  ${ROBOT_SOURCES} ${ROBOT_HEADERS})
 
-target_link_libraries(robot_lib PUBLIC config_lib utils_lib algorithm_lib)
+target_link_libraries(robot_lib PUBLIC config_lib utils_lib sensors_lib algorithm_lib)
 # Include this directory's headers
 target_include_directories(robot_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
