Moved functions outside of main to main_utils.h, created cleaned_input file for each house separetely

--- a/src/simulator/CMakeLists.txt
+++ b/src/simulator/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SIMULATOR_HEADERS
     my_simulator.h
     robot.h
     step_info.h
+    main_utils.h
 )
 
 # Create the executable from the simulator source files
