multi vis, timeout and score impl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "cmake.debugConfig": {
         "args": [
             "-house_path=../../../input",
-            "-algo_path=../../lib"
+            "-algo_path=../../lib",
+            "-num_threads=1"
         ]
     },
     "files.associations": {
