--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -12,39 +12,40 @@ FetchContent_MakeAvailable(googletest)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../simulator)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../algorithm)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../smarter_algorithm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../common)
 
 
-add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_tests.cpp 
+add_executable(unit_tests unit_tests.cpp robot_tests.cpp algorithm_a_tests.cpp 
                 sensor_tests.cpp)
 add_executable(robot_tests robot_tests.cpp)
-add_executable(algorithm_tests algorithm_tests.cpp)
+add_executable(algorithm_a_tests algorithm_a_tests.cpp)
 add_executable(sensor_tests sensor_tests.cpp)
 
 
 target_link_libraries(unit_tests
-    algorithm
+    A_209639780_207011180
     simulator
     common
     GTest::gtest_main
 )
 
 target_link_libraries(robot_tests
-    algorithm
+    A_209639780_207011180
     simulator
     common
     GTest::gtest_main
 )
 
-target_link_libraries(algorithm_tests
-    algorithm
+target_link_libraries(algorithm_a_tests
+    A_209639780_207011180
     simulator
     common
     GTest::gtest_main
 )
 
 target_link_libraries(sensor_tests
-    algorithm
+    A_209639780_207011180
     simulator
     common
     GTest::gtest_main
@@ -53,4 +54,4 @@ target_link_libraries(sensor_tests
 
 
 include(GoogleTest)
-gtest_discover_tests(unit_tests robot_tests sensor_tests algorithm_tests)
+gtest_discover_tests(unit_tests robot_tests sensor_tests algorithm_a_tests)
